--- a/sugarcrm/styleguide/less/sugarmobile.less
+++ b/sugarcrm/styleguide/less/sugarmobile.less
@@ -690,6 +690,7 @@ text-shadow: 0 -1px 0 @black;
 }
 
 .bizcard {
+  left:0px;
   position: fixed;
   top: 46px;
   width: 100%;
